tests/common/basic-auth/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_basic-auth-login.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basic-auth-login
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kflogin
    rewrite:
      uri: /kflogin
    route:
    - destination:
        host: basic-auth-login.kubeflow.svc.cluster.local
        port:
          number: 8085
