tests/common/basic-auth/overlays/istio/test_data/expected/kubeflow_apps_v1_deployment_basic-auth-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    kustomize.component: basic-auth
  name: basic-auth-login
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-auth-login
      kustomize.component: basic-auth
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: basic-auth-login
        kustomize.component: basic-auth
    spec:
      containers:
      - image: gcr.io/kubeflow-images-public/kflogin-ui:v0.5.0
        name: app
        ports:
        - containerPort: 5000
