tests/common/basic-auth/overlays/istio/test_data/expected/kubeflow_~g_v1_configmap_basic-auth-parameters.yaml
apiVersion: v1
data:
  authSecretName: kubeflow-login
  clusterDomain: cluster.local
kind: ConfigMap
metadata:
  labels:
    kustomize.component: basic-auth
  name: basic-auth-parameters
  namespace: kubeflow
